fixed left align

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -61,7 +61,7 @@ h3 {
   color: $heading-font-color;
   font-family: $heading-font;
   line-height: 1.5;
-  text-align: justify;
+  text-align: left;
 }
 h1 {
   color: $main;
