--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -12,7 +12,7 @@
 
 body { margin: 0; color: #262626; font-family: "Open Sans", sans-serif; font-size: 1.1em; line-height: 1.6; text-align: justify; -webkit-font-smoothing: antialiased; }
 
-h1, h2, h3 { font-weight: 600; color: #425469; font-family: "Muli", sans-serif; line-height: 1.5; text-align: justify; }
+h1, h2, h3 { font-weight: 600; color: #425469; font-family: "Muli", sans-serif; line-height: 1.5; text-align: left; }
 
 h1 { color: #1e4d76; font-size: 2.2em; }
 h1 a, h1 a:visited { text-decoration: none; color: #1e4d76; }
